bitflip_program/tests/snapshots/token_member_initialize_test__shared_token_member_initialize_test@kibibit-2.snap
---
source: bitflip_program/tests/token_member_initialize_test.rs
expression: parsed_treasury_member_token_account
snapshot_kind: text
---
{
  "type": "account",
  "info": {
    "mint": "[mint_member:pubkey]",
    "owner": "[treasury:pubkey]",
    "tokenAmount": {
      "uiAmount": 0.0,
      "decimals": 0,
      "amount": "0",
      "uiAmountString": "0"
    },
    "state": "initialized",
    "isNative": false,
    "extensions": [
      {
        "extension": "immutableOwner"
      }
    ]
  }
}
