bitflip_program/tests/snapshots/token_member_initialize_test__token_member_initialize_test_validator@kibibit.snap
---
source: bitflip_program/tests/token_member_initialize_test.rs
expression: "format!(\"{rounded_compute_units} CU\")"
snapshot_kind: text
---
90000 CU
